--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,14 +1,14 @@
 h2 {
-    font-size: 30px;
+    font-size: 35px;
     text-align:center;
-    color:rgb(247, 246, 239);
+    color:rgb(15, 15, 14);
     font-weight:900;
     
 }
 label,th,td {
     font-size: 15px;
     text-align:center;
-    color:rgb(247, 246, 239);
+    color:rgb(2, 2, 2);
     font-weight: 600;
     
 }
@@ -22,12 +22,12 @@ P{
  option {
     font-size: 10px;
     text-align:center;
-    color:rgb(247, 246, 239);
+    color:rgb(12, 12, 10);
     font-weight: 400;
     
 }
 .container_t {
-    background-color: #a59b92;
+    background-color: #faf8f6;
     display: flex;
     flex-direction: column;
     padding: 32px 0;
@@ -44,7 +44,7 @@ P{
     
 }
 .container {
-    background-color: #6e5d4b;
+    background-color: #fcfbfa;
     display: flex;
     flex-direction: column;
     padding: 32px 0;
