--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,7 @@
   <div class="container">
     <h2>好きなコーヒー豆のタイプ</h2>
     <hr>
-  <label for="fname">アロマ:</label>
+  <label for="fname">アロマ</label>
   <input type="range"class=="Aroma" name= "Aroma" max="5" min="1" step="1" list="ticks">
   <datalist id="ticks" class=="Aroma" name= "Aroma">
       <option value=5>強い</option>
@@ -50,7 +50,7 @@
     
   </div>
   <div class="container">
-    <label for="fname">フレーバー:</label>
+    <label for="fname">フレーバー</label>
     <input type="range"class=="Flavor" name= "Flavor" max="5" min="1" step="1" list="ticks">
     <datalist id="ticks" class=="Flavor" name= "Flavor">
       <option value=5>強い</option>
@@ -61,7 +61,7 @@
     </datalist>
   </div>
   <div class="container">
-    <label for="fname">後味:</label>
+    <label for="fname">後味</label>
     <input type="range"class=="Aftertaste" name= "Aftertaste" max="5" min="1" step="1" list="ticks">
     <datalist id="ticks" class=="Aftertaste" name= "Aftertaste">
       <option value=5>強い</option>
@@ -72,7 +72,7 @@
     </datalist>
   </div>
   <div class="container">
-    <label for="fname">酸味:</label>
+    <label for="fname">酸味</label>
     <input type="range"class=="Acidity" name= "Acidity" max="5" min="1" step="1" list="ticks">
     <datalist id="ticks" class=="Acidity" name= "Acidity">
       <option value=5>強い</option>
@@ -83,7 +83,7 @@
     </datalist>
   </div>
   <div class="container"> 
-    <label for="fname">甘さ:</label>
+    <label for="fname">甘さ</label>
     <input type="range"class=="Sweetness" name= "Sweetness" max="5" min="1" step="1" list="ticks">
     <datalist id="ticks" class=="Sweetness" name= "Sweetness">
       <option value=5>強い</option>
@@ -94,7 +94,7 @@
     </datalist>
   </div>
   <div class="container"> 
-    <label for="fname">深み:</label>
+    <label for="fname">深み</label>
     <input type="range"class=="Body" name= "Body" max="5" min="1" step="1" list="ticks">
     <datalist id="ticks" class=="Body" name= "Body">
       <option value=5>強い</option>
