--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,20 +17,25 @@
         font-family: 'Noto Sans JP', sans-serif;
       }
     </style>
-    
-  </head>
+</head>
 
-
+<!-- HEADER -->
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand">My favorite coffee</a>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
+  <header>
+    <h1>
+       <a>COFFEE RECOMMENDER</a>
+    </h1>
+    <nav class="pc-nav">
+       <ul>
+          <li><a href="https:/github.com/maru008/HuckU2021v4.git">Visit GitHub</a></li>
+       </ul>
+    </nav>
+  </header>
+  <div class="main-visual">
+      <h3>COFFEE RECOMMENDER</h3>
+  </div>
+  <div class="m-mainVisual-arrow"></div>
+</body>
 
 <form action="/index" method="POST">
 <div class="container_t">
