--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,14 +1,14 @@
 * {
     box-sizing: border-box;
- }
+}
 
- body {
+body {
     margin: 0;
     padding: 0;
-    font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ","Meiryo", "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: transparent;
     letter-spacing : 0.2em;
- }
+}
 
 h2 {
     font-size: 35px;
@@ -131,7 +131,7 @@ datalist {
  }
 
 .m-mainVisual-arrow {
-    background: url(../static/image/yajirusi.png) no-repeat;
+    background: url('../static/image/yajirusi.png') no-repeat;
     width: 22px;
     height: 13px;
     background-size: 22px 13px;
