--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <script src = "../static/main.js"></script>
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" />
     <!-- bootstrap css-->
-    <link rel="icon" href="../static/fig/coffee_Icon.ico">
+    <link rel="icon" href="../static/favicon.ico">
     <link rel="stylesheet" href="../static/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
