--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>コーヒー豆の推薦</title>
-    <link rel="icon" href="../static/fig/coffee_Icon.ico">
+    <link rel="icon" href="../static/favicon.ico">
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
