change github url

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
     </h1>
     <nav class="pc-nav">
         <ul>
-          <li><a href="https:/github.com/maru008/HuckU2021v4.git">Visit GitHub</a></li>
+          <li><a href="https://github.com/maru008/CoffeeRecommend-master">Visit GitHub</a></li>
         </ul>
     </nav>
   </header>
